Updates on: Portfolio list

--- a/index.html
+++ b/index.html
@@ -44,68 +44,43 @@
           </div>
     </section>
 
-      <section class="projects on-grid has-padding-vh">
-      <div class="grid-3 table projects">
-            <div class="table-head large">Geselecteerde projecten</div>
-            <a class="fade-arrow" href="https://www.tinker.nl" target="_blank">
-            <div class="row row-link">
-              <div class="title">
-                <h3 class="medium">Tinker Imagineers</h3>
-                <span class="small tags">Interactive - &bull; Visual Design</span>
-              </div>
-              <div class="right">
-                  <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
-              </div>
-            </div>
-            </a>
-            <a class="fade-arrow" href="ekhartyoga.html">
-            <div class="row row-link">
-              <div class="title">
-                <h3 class="medium">EkhartYoga</h3>
-                <span class="small tags">UX &bull; UI &bull; Web & App &bull; Design System</span>
-              </div>
-              <div class="right">
-                  <span class="arrow">Case<span class="small fade move"> &rarr;</span></span>
-              </div>
-            </div>
-            </a>
-            <a class="fade-arrow" href="mamaplaats.html">
-            <div class="row row-link">
+    <section>
+      <div>
+      <div class="large">Geselecteerde projecten</div>
+      <ul id="projectList">
+          <li>
+              <a class="row-link" href="http://www.isdatechtzo.nl"><div class="title"><h3 class="medium">Isdatechtzo.nl</h3><div class="project_type"> Visual Design &#x2197;</div></div></a>
+              <img src="http://lorempixel.com/500/500/fashion/" />
+          </li>
+          <li>
+            <a class="row-link" href="http://www.rudutrecht.nl"><div class="title row-link"><h3 class="medium">RUD Utrecht</h3><div class="project_type">Wireframes &bull; Visual Design</div></div></a>
+              <img class="list-image" src="http://lorempixel.com/500/500/city/" />
+          </li>
+          <li>
+            <a class="row-link" href="http://www.loekan.nl"><div class="title"><h3 class="medium">Loekan</h3><div class="project_type"> Visual Design </div></div></a>
+              <img src="http://lorempixel.com/500/500/city/" />
+          </li>
+          <li>
+            <a class="row-link" href="http://www.moville.nl"><div class="title"><h3 class="medium">Moville</h3><div class="project_type">Brand Design &bull; Website &bull; Webflow</div></div></a>
+              <img src="http://lorempixel.com/500/500/city/" />
+          </li>
+          <li>
+            <a class="row-link" href="http://www.tinkerimageineers.nl"><div class="title"><h3 class="medium">Tinker Imagineers</h3><div class="project_type"> Interactive &bull; Visual Design</div></div></a>
+              <img src="http://lorempixel.com/500/500/city/" />
+          </li>
+          <li>
+            <a class="row-link" href="http://www.ekhartyoga.com"><div class="title"><h3 class="medium">EkhartYoga</h3><div class="project_type"> UX/UI &bull; Design System &bull; Web + App</div></div></a>
+              <img src="http://lorempixel.com/500/500/city/" />
+          </li>
+          <li>
+            <a class="row-link" href="http://www.buddytobuddy.nl"><div class="title"><h3 class="medium">Buddy to Buddy</h3><div class="project_type">Brand Design &bull; Website</div></div></a>
+              <img src="http://lorempixel.com/500/500/city/" />
+          </li>
+      </ul>
+    </div>
+    </section>
 
-              <div class="title">
-                <h3 class="medium">Mamaplaats</h3>
-                <span class="small tags">UX &bull; UI &bull; Visual Design &bull; Web & App</span>
-              </div>
-              <div class="right">
-                <span class="arrow">Case<span class="small fade move"> &rarr;</span></span>
-              </div>
-            </div>
-            </a>
-            <a class="fade-arrow" href="http://www.odeutrecht.nl" target="_blank">
-            <div class="row row-link">
-              <div class="title">
-                <h3 class="medium">Ode Utrecht</h3>
-                <span class="small tags">Visual Design &bull; Mailchimp Templates</span>
-              </div>
-              <div class="right">
-              <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
-              </div>
-            </div>
-            </a>
-            <a class="fade-arrow" href="https://www.buddytobuddy.nl" target="_blank">
-            <div class="row row-link">
-              <div class="title">
-                <h3 class="medium">Buddy to Buddy</h3>
-                <span class="small tags">Logo Design &bull; Wordpress</span>
-              </div>
-              <div class="right">
-                <span class="arrow">Link<span class="small fade move"> &#x2197;</span></span>
-              </div>
-            </div>
-            </a>
 
-        </div>
-      </section>
       <section class="who-hires-me on-grid has-padding-vh">
         <div class="grid-3"><h2 class="large">Wie help ik</h2></div>
         <div class="grid-2"><p class="medium "><span class="strong">Studios en merken</span><br />
@@ -121,12 +96,23 @@ huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus o
               <a href="http://www.frismedia.nl" target="_blank">
               <div class="row row-link">
                 <div class="title">
+                  <h3 class="medium">SchaapOntwerpers</h3>
+                </div>
+                <div class="right">
+                  <span class="year small">Digital Designer &bull; 1 jaar</span>
+                </div>
+              </div>
+            </a>
+              <a href="http://www.frismedia.nl" target="_blank">
+              <div class="row row-link">
+                <div class="title">
                   <h3 class="medium">Frismedia</h3>
                 </div>
                 <div class="right">
                   <span class="year small">Ontwerper &bull; 3 jaar</span>
                 </div>
               </div>
+            </a>
               <a href="http://www.cleverfranke.com" target="_blank">
               <div class="row row-link">
                 <div class="title">
