Arrows added Table head no border

--- a/index.html
+++ b/index.html
@@ -44,40 +44,40 @@
           </div>
     </section>
 
-    <section>
-      <div>
+    <section class="has-padding-vh">
+
       <div class="large">Geselecteerde projecten</div>
       <ul id="projectList">
           <li>
-              <a class="row-link" href="http://www.isdatechtzo.nl"><div class="title"><h3 class="medium">Isdatechtzo.nl</h3><div class="project_type"> Visual Design &#x2197;</div></div></a>
+              <a class="fade-arrow row-link" href="http://www.isdatechtzo.nl" target="_blank"><div class="title"><h3 class="medium">Isdatechtzo.nl</h3><span class="project_type"> Visual Design<span class="fade"> &#x2197;</span></span></div></a>
               <img src="http://lorempixel.com/500/500/fashion/" />
           </li>
           <li>
-            <a class="row-link" href="http://www.rudutrecht.nl"><div class="title row-link"><h3 class="medium">RUD Utrecht</h3><div class="project_type">Wireframes &bull; Visual Design</div></div></a>
+            <a class="fade-arrow row-link" href="http://www.rudutrecht.nl" target="_blank"><div class="title row-link"><h3 class="medium">RUD Utrecht</h3><span class="project_type">Wireframes &bull; Visual Design<span class="fade"> &#x2197;</span></span></div></a>
               <img class="list-image" src="http://lorempixel.com/500/500/city/" />
           </li>
           <li>
-            <a class="row-link" href="http://www.loekan.nl"><div class="title"><h3 class="medium">Loekan</h3><div class="project_type"> Visual Design </div></div></a>
+            <a class="fade-arrow row-link" href="http://www.loekan.nl" target="_blank"><div class="title"><h3 class="medium">Loekan</h3><span class="project_type"> Visual Design <span class="fade"> &#x2197;</span></span></div></a>
               <img src="http://lorempixel.com/500/500/city/" />
           </li>
           <li>
-            <a class="row-link" href="http://www.moville.nl"><div class="title"><h3 class="medium">Moville</h3><div class="project_type">Brand Design &bull; Website &bull; Webflow</div></div></a>
+            <a class="fade-arrow row-link" href="http://www.moville.nl" target="_blank"><div class="title"><h3 class="medium">Moville</h3><span class="project_type">Brand Design &bull; Website &bull; Webflow<span class="fade"> &#x2197;</span></span></div></a>
               <img src="http://lorempixel.com/500/500/city/" />
           </li>
           <li>
-            <a class="row-link" href="http://www.tinkerimageineers.nl"><div class="title"><h3 class="medium">Tinker Imagineers</h3><div class="project_type"> Interactive &bull; Visual Design</div></div></a>
+            <a class="fade-arrow row-link" href="http://www.tinkerimageineers.nl" target="_blank"><div class="title"><h3 class="medium">Tinker Imagineers</h3><span class="project_type"> Interactive &bull; Visual Design <span class="fade"> &#x2197;</span></span></div></a>
               <img src="http://lorempixel.com/500/500/city/" />
           </li>
           <li>
-            <a class="row-link" href="http://www.ekhartyoga.com"><div class="title"><h3 class="medium">EkhartYoga</h3><div class="project_type"> UX/UI &bull; Design System &bull; Web + App</div></div></a>
+            <a class="fade-arrow row-link" href="http://www.ekhartyoga.com" target="_blank"><div class="title"><h3 class="medium">EkhartYoga</h3><span class="project_type"> UX/UI &bull; Design System &bull; Web + App <span class="fade"> &#x2197;</span></span></div></a>
               <img src="http://lorempixel.com/500/500/city/" />
           </li>
           <li>
-            <a class="row-link" href="http://www.buddytobuddy.nl"><div class="title"><h3 class="medium">Buddy to Buddy</h3><div class="project_type">Brand Design &bull; Website</div></div></a>
+            <a class="fade-arrow row-link" href="http://www.buddytobuddy.nl" target="_blank"><div class="title"><h3 class="medium">Buddy to Buddy</h3><span class="project_type">Brand Design &bull; Website <span class="fade"> &#x2197;</span></span></div></a>
               <img src="http://lorempixel.com/500/500/city/" />
           </li>
       </ul>
-    </div>
+
     </section>
 
 
