Added images to portfolio

--- a/index.html
+++ b/index.html
@@ -49,32 +49,28 @@
       <div class="large">Geselecteerde projecten</div>
       <ul id="projectList">
           <li>
-              <a class="fade-arrow row-link" href="http://www.isdatechtzo.nl" target="_blank"><div class="title"><h3 class="medium">Isdatechtzo.nl</h3><span class="project_type"> Visual Design<span class="fade"> &#x2197;</span></span></div></a>
-              <img src="http://lorempixel.com/500/500/fashion/" />
+              <a class="fade-arrow row-link" href="http://isdatechtzo.nl" target="_blank"><div class="title"><h3 class="medium">Isdatechtzo.nl</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+              <img src="img/isdatechtzo.png" />
           </li>
           <li>
             <a class="fade-arrow row-link" href="http://www.rudutrecht.nl" target="_blank"><div class="title row-link"><h3 class="medium">RUD Utrecht</h3><span class="project_type">Wireframes &bull; Visual Design<span class="fade"> &#x2197;</span></span></div></a>
-              <img class="list-image" src="http://lorempixel.com/500/500/city/" />
+              <img src="img/rudutrecht.png" />
           </li>
           <li>
-            <a class="fade-arrow row-link" href="http://www.loekan.nl" target="_blank"><div class="title"><h3 class="medium">Loekan</h3><span class="project_type"> Visual Design <span class="fade"> &#x2197;</span></span></div></a>
-              <img src="http://lorempixel.com/500/500/city/" />
+            <a class="fade-arrow row-link" href="http://www.moville.nl" target="_blank"><div class="title"><h3 class="medium">Moville</h3><span class="project_type">Huisstijl &bull; Website<span class="fade"> &#x2197;</span></span></div></a>
+              <img src="img/moville.png" />
           </li>
           <li>
-            <a class="fade-arrow row-link" href="http://www.moville.nl" target="_blank"><div class="title"><h3 class="medium">Moville</h3><span class="project_type">Brand Design &bull; Website &bull; Webflow<span class="fade"> &#x2197;</span></span></div></a>
-              <img src="http://lorempixel.com/500/500/city/" />
-          </li>
-          <li>
-            <a class="fade-arrow row-link" href="http://www.tinkerimageineers.nl" target="_blank"><div class="title"><h3 class="medium">Tinker Imagineers</h3><span class="project_type"> Interactive &bull; Visual Design <span class="fade"> &#x2197;</span></span></div></a>
-              <img src="http://lorempixel.com/500/500/city/" />
+            <a class="fade-arrow row-link" href="http://www.tinker.nl" target="_blank"><div class="title"><h3 class="medium">Tinker Imagineers</h3><span class="project_type"> Interactive &bull; Visual Design <span class="fade"> &#x2197;</span></span></div></a>
+              <img src="img/tinker.png" />
           </li>
           <li>
             <a class="fade-arrow row-link" href="http://www.ekhartyoga.com" target="_blank"><div class="title"><h3 class="medium">EkhartYoga</h3><span class="project_type"> UX/UI &bull; Design System &bull; Web + App <span class="fade"> &#x2197;</span></span></div></a>
-              <img src="http://lorempixel.com/500/500/city/" />
+              <img src="img/ekhart.png" />
           </li>
           <li>
-            <a class="fade-arrow row-link" href="http://www.buddytobuddy.nl" target="_blank"><div class="title"><h3 class="medium">Buddy to Buddy</h3><span class="project_type">Brand Design &bull; Website <span class="fade"> &#x2197;</span></span></div></a>
-              <img src="http://lorempixel.com/500/500/city/" />
+            <a class="fade-arrow row-link" href="http://www.buddytobuddy.nl" target="_blank"><div class="title"><h3 class="medium">Buddy to Buddy</h3><span class="project_type">Huisstijl<span class="fade"> &#x2197;</span></span></div></a>
+              <img src="img/buddytobuddy.png" />
           </li>
       </ul>
 
