--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
       <section class="who-hires-me on-grid has-padding-vh">
         <div class="grid-3"><h2 class="large">Wie help ik</h2></div>
         <div class="grid-2"><p class="medium "><span class="strong">Studios en merken</span><br />
-huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, maar die ook weet hoe producten functioneel verbeterd kunnen worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development en is mijn doel altijd om het ontwerpproces te verbeteren en te versnellen. Gepaard met een open houding, betrokkenheid en een lach.
+huren mij in wanneer ze verlegen zitten om een teamspeler met een sterke focus op Visual &amp; User Interface Design, die ook weet hoe producten functioneel verbeterd kunnen worden.</p><p class="medium"> Met een breed scala aan vaardigheden voeg ik waarde toe van concept tot development altijd gepaard met een open houding, betrokkenheid en een smile.
       </p><br/><br/>
         <p class="medium "><span class="strong">Kleine ondernemingen en start-ups</span><br />
-        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites te verbeteren en de merkbeleving te vergroten.
+        kunnen contact opnemen wanneer ze voor creatieve uitdagingen staan. Ik help ze vooruit door de functionaliteit, bruikbaarheid en esthetiek van apps en websites te verbeteren en de digitale merkbeleving te vergroten.
       </div>
       </section>
       <section class="studio-experience on-grid has-padding-vh">
