--- a/index.html
+++ b/index.html
@@ -46,14 +46,26 @@
 
     <section class="has-padding-vh">
 
-      <div class="large">Geselecteerde projecten</div>
+      <div class="large">Projecten waar ik betrokken was</div>
       <ul id="projectList">
+        <li>
+            <a class="fade-arrow row-link" href="http://copilots.nl" target="_blank"><div class="title"><h3 class="medium">Copilots</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+            <img src="img/copilots.png" />
+        </li>
+        <li>
+            <a class="fade-arrow row-link" href="http://koffieleute.nl" target="_blank"><div class="title"><h3 class="medium">Koffieleute</h3><span class="project_type">Visual Design &bull; Front-end<span class="fade"> &#x2197;</span></span></div></a>
+            <img src="img/koffieleute.png" />
+        </li>
           <li>
-              <a class="fade-arrow row-link" href="http://isdatechtzo.nl" target="_blank"><div class="title"><h3 class="medium">Isdatechtzo.nl</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+              <a class="fade-arrow row-link" href="http://isdatechtzo.nl" target="_blank"><div class="title"><h3 class="medium">Isdatechtzo.nl*</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
               <img src="img/isdatechtzo.png" />
           </li>
           <li>
-            <a class="fade-arrow row-link" href="http://www.rudutrecht.nl" target="_blank"><div class="title row-link"><h3 class="medium">RUD Utrecht</h3><span class="project_type">Wireframes &bull; Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+            <a class="fade-arrow row-link" href="http://www.groenkennisnet.nl" target="_blank"><div class="title"><h3 class="medium">Groen Kennisnet*</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+              <img src="img/rudutrecht.png" />
+          </li>
+          <li>
+            <a class="fade-arrow row-link" href="http://www.rudutrecht.nl" target="_blank"><div class="title"><h3 class="medium">RUD Utrecht*</h3><span class="project_type">Wireframes &bull; Visual Design<span class="fade"> &#x2197;</span></span></div></a>
               <img src="img/rudutrecht.png" />
           </li>
           <li>
@@ -61,11 +73,11 @@
               <img src="img/moville.png" />
           </li>
           <li>
-            <a class="fade-arrow row-link" href="http://www.tinker.nl" target="_blank"><div class="title"><h3 class="medium">Tinker Imagineers</h3><span class="project_type"> Interactive &bull; Visual Design <span class="fade"> &#x2197;</span></span></div></a>
+            <a class="fade-arrow row-link" href="http://www.tinker.nl" target="_blank"><div class="title"><h3 class="medium">Tinker Imagineers~</h3><span class="project_type"> Interactive &bull; Visual Design <span class="fade"> &#x2197;</span></span></div></a>
               <img src="img/tinker.png" />
           </li>
           <li>
-            <a class="fade-arrow row-link" href="http://www.ekhartyoga.com" target="_blank"><div class="title"><h3 class="medium">EkhartYoga</h3><span class="project_type"> UX/UI &bull; Design System &bull; Web + App <span class="fade"> &#x2197;</span></span></div></a>
+            <a class="fade-arrow row-link" href="http://www.ekhartyoga.com" target="_blank"><div class="title"><h3 class="medium">EkhartYoga~</h3><span class="project_type"> UX/UI &bull; Design System &bull; Web + App <span class="fade"> &#x2197;</span></span></div></a>
               <img src="img/ekhart.png" />
           </li>
           <li>
@@ -73,7 +85,7 @@
               <img src="img/buddytobuddy.png" />
           </li>
       </ul>
-
+      <div class="grid-3"><p class="small">* met Schaapontwerpers &nbsp~ met </p></div>
     </section>
 
 
