--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <img src="img/buddytobuddy.png" />
           </li>
       </ul>
-      <div class="grid-3"><p class="small">* met Schaapontwerpers &nbsp~ met </p></div>
+      <div class="grid-3"><p class="small">* met Schaapontwerpers <br/>~ met Frismedia </p></div>
     </section>
 
 
