--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section class="has-padding-vh">
 
-      <div class="large">Projecten waar ik betrokken was</div>
+      <div class="large">Projecten waar ik bij betrokken was</div>
       <ul id="projectList">
         <li>
             <a class="fade-arrow row-link" href="http://copilots.nl" target="_blank"><div class="title"><h3 class="medium">Copilots</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
