--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </li>
           <li>
             <a class="fade-arrow row-link" href="http://www.groenkennisnet.nl" target="_blank"><div class="title"><h3 class="medium">Groen Kennisnet*</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
-              <img src="img/rudutrecht.png" />
+              <img src="img/groenkennisnet.png" />
           </li>
           <li>
             <a class="fade-arrow row-link" href="http://www.rudutrecht.nl" target="_blank"><div class="title"><h3 class="medium">RUD Utrecht*</h3><span class="project_type">Wireframes &bull; Visual Design<span class="fade"> &#x2197;</span></span></div></a>
