--- a/index.html
+++ b/index.html
@@ -49,16 +49,20 @@
       <div class="large">Projecten waar ik bij betrokken was</div>
       <ul id="projectList">
         <li>
-            <a class="fade-arrow row-link" href="http://copilots.nl" target="_blank"><div class="title"><h3 class="medium">Copilots</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+            <a class="fade-arrow row-link" href="http://copilots.nl" target="_blank"><div class="title"><h3 class="medium">Copilots°</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
             <img src="img/copilots.png" />
         </li>
         <li>
-            <a class="fade-arrow row-link" href="http://koffieleute.nl" target="_blank"><div class="title"><h3 class="medium">Koffieleute</h3><span class="project_type">Visual Design &bull; Front-end<span class="fade"> &#x2197;</span></span></div></a>
+            <a class="fade-arrow row-link" href="http://koffieleute.nl" target="_blank"><div class="title"><h3 class="medium">Koffieleute°</h3><span class="project_type">Visual Design &bull; Front-end<span class="fade"> &#x2197;</span></span></div></a>
             <img src="img/koffieleute.png" />
         </li>
           <li>
               <a class="fade-arrow row-link" href="http://isdatechtzo.nl" target="_blank"><div class="title"><h3 class="medium">Isdatechtzo.nl*</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
               <img src="img/isdatechtzo.png" />
+          </li>
+          <li>
+            <a class="fade-arrow row-link" href="http://www.abf.nl" target="_blank"><div class="title"><h3 class="medium">ABF Research*</h3><span class="project_type">Huisstijl &bull; Graphic Design &bull; Visual Design<span class="fade"> &#x2197;</span></span></div></a>
+              <img src="img/abf.png" />
           </li>
           <li>
             <a class="fade-arrow row-link" href="http://www.groenkennisnet.nl" target="_blank"><div class="title"><h3 class="medium">Groen Kennisnet*</h3><span class="project_type">Visual Design<span class="fade"> &#x2197;</span></span></div></a>
@@ -80,12 +84,8 @@
             <a class="fade-arrow row-link" href="http://www.ekhartyoga.com" target="_blank"><div class="title"><h3 class="medium">EkhartYoga~</h3><span class="project_type"> UX/UI &bull; Design System &bull; Web + App <span class="fade"> &#x2197;</span></span></div></a>
               <img src="img/ekhart.png" />
           </li>
-          <li>
-            <a class="fade-arrow row-link" href="http://www.buddytobuddy.nl" target="_blank"><div class="title"><h3 class="medium">Buddy to Buddy</h3><span class="project_type">Huisstijl<span class="fade"> &#x2197;</span></span></div></a>
-              <img src="img/buddytobuddy.png" />
-          </li>
       </ul>
-      <div class="grid-3"><p class="small">* met Schaapontwerpers <br/>~ met Frismedia </p></div>
+      <div class="grid-3"><p class="small">* met SchaapOntwerpers <br/>~ met Frismedia <br/>° met Copilots</p></div>
     </section>
 
 
